# chronix2grid

./: .gitignore  .readthedocs.yml  AUTHORS.txt  LicensesInformation.md  MANIFEST.in  Pipfile  README.md  requirements.txt  requirements_test.txt  setup.py  test_cvxpy.py
.circleci/: config.yml
PypsaDispatchBackend/: EconomicDispatch.py  PypsaEconomicDispatch.py  __init__.py  generate_dispatch.py
RenewableGANBackend/: backend.py  config.py  generate_solar_wind_gan.py
chronix2grid/: Debug_Why_Env_Collapses.ipynb  GeneratorBackend.py  GetGridGenLoadRenewables.ipynb  __init__.py  config.py  constants.py  default_backend.py  ec_validator_output.txt  main.py  output_processor.py  seed_manager.py  utils.py
docs/: DESCRIPTION.rst  GETTING_STARTED.rst  INSTALL.rst  INTERFACE.rst  KPI.rst  README.rst  conf.py  index.rst
getting_started/: Automated_EnvGeneration_process.ipynb  getting_started_api.ipynb  getting_started_cli.ipynb  replace_energy_prod.ipynb  running_chronics_grid2op.ipynb
getting_started/experiments/optimization/solver/: CMakeLists.txt  README.md
getting_started/experiments/optimization/solver/headers/: algorithms.hh  constants.hh  parse_args.hh
getting_started/experiments/optimization/solver/include/: algorithms.hh  constants.hh  problem.hh  utils.hh
getting_started/experiments/optimization/solver/src/: algorithms.cc  main.cc  manage_result.cc  objective.cc  print_results.cc  problem.cc
grids/: L2RPN_2020_case118.json  L2RPN_2020_case118_redesigned.json
scripts/: generate_l2rpn_case_14.sh
tests/: test_EconomicDispatch.py  test_cli.py  (+8 more)
(+713 files in other folders)
